--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,36 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Milo's Code Chronicles - Your source for coding knowledge.">
+    <meta name="author" content="Milo">
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Milo's Code Chronicles</title>
 </head>
 
 <body>
 
-    <div id="nav-bar">
-        <a href="/home" id="home-btn">
-            <button>Home</button>
-        </a>
-        {{#if logged_in}}
-        <button id="logout-btn">Logout</button>
-        {{else}}
-        <div id="login-signup">
-            <a href="/login">
-                <button>Log In</button>
+    <header>
+        <nav id="nav-bar">
+            <a href="/" id="home-btn">
+                <button>Home</button>
             </a>
-            <a href="/signup" id="signup-btn">
-                <button>Sign Up</button>
-            </a>
-        </div>
-        {{/if}}
-    </div>
+            {{#if logged_in}}
+            <a href="/profile" id="current-user"></a>
+            <button id="logout-btn">Logout</button>
+            {{else}}
+            <div id="login-signup">
+                <a href="/login">
+                    <button>Log In</button>
+                </a>
+                <a href="/signup" id="signup-btn">
+                    <button>Sign Up</button>
+                </a>
+            </div>
+            {{/if}}
+        </nav>
+    </header>
 
     <main>
         {{{body}}}
     </main>
 
     {{#if logged_in}}
-    <script src="/js/logout.js"></script>
+    <script src="/js/logout.js" async></script>
     {{/if}}
 
 </body>
