--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,8 +13,47 @@ button {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
 }
 
-.mui-textfield {
-  width: 70%;
+.comment {
+  border-color: #e06196;
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 15px;
+  padding: 2%;
+  margin-bottom: 2%;
+}
+
+.comments-title {
+  color: #e06196;
+  padding: 1%;
+  margin-top: 1%;
+  background-color: white;
+  border-color: #e06196;
+  border-bottom-style: solid;
+}
+
+.comment-user {
+  font-size: medium;
+  color: #e06196;
+  text-decoration: underline;
+}
+
+.comment-post {
+  font-size: large;
+  color: #e06196;
+  text-decoration: underline;
+}
+
+.comment-text {
+  font-size: medium;
+  margin-bottom: 1%;
+}
+
+#comments-toggle:hover {
+  background-color: #ffdae8;
+}
+
+.drk-pink {
+  color: #e06196;
 }
 
 #sidebar {
@@ -50,6 +89,7 @@ button {
   color: #e06196;
   margin-bottom: 0.5%;
   justify-content: space-between;
+  text-decoration: underline;
 }
 
 #blog-title,
@@ -71,15 +111,18 @@ button {
   margin-top: 8%;
 }
 
-#login-form,
-#post-edit-form {
+#edit-comment-form {
+  display: none;
+}
+
+.form {
   padding: 10%;
 }
 
-#new-post-btn {
+.new-post-btn {
   border-color: #e06196;
-  color: white;
-  background-color: #f5a4c4;
+  color: #e06196;
+  background-color: white;
   border-width: 3px;
   border-style: solid;
   border-radius: 15px;
@@ -87,23 +130,25 @@ button {
   margin-bottom: 1%;
 }
 
-#edit-btn {
+.edit-btn {
   font-size: small;
-  background-color: #f5a4c5;
-  color: white;
+  background-color: white;
+  color: #e06196;
   border-radius: 15px;
   border-style: solid;
   border-color: #e06196;
 }
 
-#edit-btn:hover {
-  background-color: #e06196;
+.edit-btn:hover {
+  border-color: #f5a4c5;
+  background-color: #f5a4c5;
+  color: white;
 }
 
-#new-post-btn:hover {
-  background-color: white;
-  color: #e06196;
-  border-color: #e06196;
+.new-post-btn:hover {
+  background-color: #f5a4c5;
+  color: white;
+  border-color: #f5a4c5;
 }
 
 #home-btn,
@@ -143,6 +188,10 @@ button {
 
 ul {
   list-style: none;
+}
+
+#submit-btn {
+  color:#e06196;
 }
 
 @media (min-width: 768px) {
