--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,14 +3,14 @@
     <br>
     <br>
     {{#if loggedIn}}
-      <div id="recent-posts" class="mui--text-dark-secondary mui--text-body2">RECENT POSTS<button id="new-post-btn">New Post</button></div>
+      <div id="recent-posts" class="mui--text-dark-secondary mui--text-body2">RECENT POSTS<button class="new-post-btn" onclick="window.location.href='/newpost'">New Post</button></div>
       <div class="mui-divider"></div>
       <br>
       {{#each posts as |post|}}
       {{> blog-post post=post}}
       {{/each}}
     {{else}}
-      <div id="pinned-posts" class="mui--text-dark-secondary mui--text-body2">PINNED POST</div>
+      <div id="pinned-posts" class="mui--text-dark-secondary mui--text-body2">PINNED POST<button class="new-post-btn" class="new-post-btn" onclick="window.location.href='/newpost'">New Post</button></div>
       <div class="mui-divider"></div>
       <br>
       {{#with posts.[0] as |yost|}}
@@ -19,3 +19,5 @@
     {{/if}}
   </div>
 </div>
+
+<script src="/js/new-post.js"></script>
