--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,5 +1,5 @@
 <form id="new-post-form" class="mui-form form" action="/api/blog/new" method="PUT">
-  <h2 class="drk-pink">Edit Post</h2>
+  <h2 class="drk-pink">New Post</h2>
   <div class="mui-textfield">
     <input id="new-title" type="text" placeholder="Post Title" required>
     <label>Title</label>
