--- a/views/partials/dash-post.handlebars
+++ b/views/partials/dash-post.handlebars
@@ -4,7 +4,7 @@
   <div>
     {{#if this.dataValues.postText}}
     {{shortPost this.dataValues.postText}}
-    <a href="/api/blog/{{this.dataValues.id}}">Read more...</a>
+    <a href="/blog/{{this.dataValues.id}}">Read more...</a>
     {{else}}
     <p>No post content available</p>
     {{/if}}
