--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -17,6 +17,10 @@
           onclick="window.location.href = '/';">
     Home
   </button>
+  <button id="user-btn"
+          onclick="window.location.href = '/login';">
+    Dashboard
+  </button>
   <button id="login-btn"
           onclick="window.location.href = '/login';">
     Login
