--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,11 +1,11 @@
 <form id="post-edit-form" class="mui-form form" action="/api/blog/edit/{{post.dataValues._id}}" method="PUT">
   <h2 class="drk-pink">Edit Post</h2>
   <div class="mui-textfield">
-    <input id="edit-title" type="text" placeholder="{{post.dataValues.postTitle}}">
+    <input id="edit-title" type="text" value="{{post.dataValues.postTitle}}">
     <label>Title</label>
   </div>
   <div class="mui-textfield">
-    <textarea id="edit-body" placeholder="{{post.dataValues.postText}}"></textarea>
+    <textarea id="edit-body" value="{{post.dataValues.postText}}"></textarea>
     <label>Body</label>
   </div>
   <div class="flex-row">
