--- a/views/partials/dash-comment.handlebars
+++ b/views/partials/dash-comment.handlebars
@@ -1,19 +1,14 @@
 <div class="comment">
-  <input class="comment-id" value="{{this.dataValues.id}}" hidden>
   <div>
     <div class="flex-row">
       <a class="drk-pink comment-post"
-           href="/blog/{{this.dataValues.post_id}}">See Original Post</a>
-        <button class="edit-btn">Edit</button>
+         href="/blog/{{this.dataValues.post_id}}">See Original Post</a>
     </div>
+    <div class="comment-user mui--text-dark-secondary">On {{format_date this.dataValues.createdAt}}</div>
     {{#if this.dataValues.commentText}}
     <div class="comment-text">
       {{shortPost this.dataValues.commentText}}
     </div>
-    <form id="edit-comment-form">
-        <input type="text" id="edited-comment" value="{{this.dataValues.commentText}}">
-        <button type="submit">Submit</button>
-    </form>
     {{else}}
     <p>No comment available</p>
     {{/if}}
