Extended idle timer and updated full-post.handlebars

--- a/views/full-post.handlebars
+++ b/views/full-post.handlebars
@@ -45,6 +45,8 @@
             <button id="submit-btn"
                     class="mui-btn">submit</button>
           </form>
+          {{else}}
+          <p><a href="/login"></a>Log in to comment.</p>
           {{/if}}
         </li>
       </ul>
