--- a/views/full-post.handlebars
+++ b/views/full-post.handlebars
@@ -14,7 +14,7 @@
     {{format_date post.dataValues.updatedAt}}
   </div>
   <div>
-    {{post.dataValues.postText}}
+    {{{post.dataValues.postText}}}
   </div>
   <br>
   <div class="mui-divider"></div>
