--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,28 +1,23 @@
 <div id="sidebar">
   <div class="mui--text-light mui--text-display1 mui--align-vertical">Tech Time</div>
   {{#if loggedIn}}
-  <button id="home-btn"
-          onclick="window.location.href = '/';">
+  <button id="home-btn" onclick="window.location.href = '/';">
     Home
   </button>
-  <button id="user-btn"
-          onclick="window.location.href = '/dashboard/{{username}}';">
-    Dashboard
+  <button id="user-btn" onclick="window.location.href = '/dashboard/{{username}}';">
+    Dash
   </button>
   <button id="logout-btn">
     Logout
   </button>
   {{else}}
-  <button id="home-btn"
-          onclick="window.location.href = '/';">
+  <button id="home-btn" onclick="window.location.href = '/';">
     Home
   </button>
-  <button id="user-btn"
-          onclick="window.location.href = '/login';">
-    Dashboard
+  <button id="user-btn" onclick="window.location.href = '/login';">
+    Dash
   </button>
-  <button id="login-btn"
-          onclick="window.location.href = '/login';">
+  <button id="login-btn" onclick="window.location.href = '/login';">
     Login
   </button>
   {{/if}}
