--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,15 +56,6 @@ button {
   color: #e06196;
 }
 
-#sidebar {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: #e06196;
-  padding: 15px;
-}
-
 #blog-post {
   border-color: #e06196;
   border-width: 5px;
@@ -112,7 +103,6 @@ button {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 8%;
 }
 
 #edit-comment-form {
@@ -168,6 +158,8 @@ button {
   border-radius: 15px;
   margin: 10%;
   padding: 10%;
+  align-items: center;
+  justify-content: center;
 }
 
 #home-btn:hover,
@@ -195,22 +187,72 @@ ul {
 }
 
 #submit-btn {
-  color:#e06196;
+  color: #e06196;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #sidebar {
     position: fixed;
     top: 0;
     bottom: 0;
-    width: 180px;
+    width: 10%;
     height: 100%;
     padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #e06196;
+    padding: 15px;
+    margin-right: 20%;
+  }
+
+  #content {
+    margin-left: 10%;
+  }
+
+  #recent-posts {
+    margin-top: 7%;
   }
 }
 
-@media (min-width: 768px) {
+@media only screen and (max-width: 767px) {
+  #sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #e06196;
+  }
+
+  #home-btn,
+  #login-btn,
+  #logout-btn,
+  #user-btn {
+    width: 15%;
+    height: 50%;
+    color: #e06196;
+    border-color: #f5a4c5;
+    background-color: white;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 15px;
+    padding: 2%;
+    margin: 0%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
   #content {
-    margin-left: 180px;
+    margin-top: 25%;
+    align-items: center;
+    justify-items: flex;
+    height: 100%;
   }
 }
