--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,10 @@
+/* Set the height of html, body to 100% */
 html,
 body {
   height: 100%;
 }
 
+/* Apply font smoothing and text shadow to enhance appearance */
 html,
 body,
 input,
@@ -13,6 +15,7 @@ button {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
 }
 
+/* Style for comments container */
 .comment {
   border-color: #e06196;
   border-width: 3px;
@@ -22,6 +25,7 @@ button {
   margin-bottom: 2%;
 }
 
+/* Style for the comment container title */
 .comments-title {
   color: #e06196;
   padding: 1%;
@@ -31,31 +35,32 @@ button {
   border-bottom-style: solid;
 }
 
+/* Style for comment container's username */
 .comment-user {
   font-size: medium;
   color: #e06196;
   text-decoration: underline;
 }
 
+/* Style for comment poster */
 .comment-post {
   font-size: large;
   color: #e06196;
   text-decoration: underline;
 }
 
+/* Comment */
 .comment-text {
   font-size: medium;
   margin-bottom: 1%;
 }
 
-#comments-toggle:hover {
-  background-color: #ffdae8;
-}
-
+/* Text color for any component with dark pink class */
 .drk-pink {
   color: #e06196;
 }
 
+/* Styling for blog-post container */
 #blog-post {
   border-color: #e06196;
   border-width: 5px;
@@ -65,6 +70,7 @@ button {
   border-radius: 15px;
 }
 
+/* Styling for bp-full container */
 #bp-full {
   border-color: #e06196;
   border-width: 5px;
@@ -74,6 +80,7 @@ button {
   border-radius: 15px;
 }
 
+/* Style blog post title */
 #bp-title {
   display: flex;
   flex-direction: row;
@@ -83,20 +90,24 @@ button {
   text-decoration: underline;
 }
 
+/* Style for blog title and blog title  */
 #blog-title,
 #blog-title a {
   color: #e06196;
   margin-bottom: 0.5%;
 }
 
+/* Remove text-decorations  */
 .comment-user {
   text-decoration: none;
 }
 
+/* Add slight margin to username title */
 #title-user {
   margin-bottom: 1%;
 }
 
+/* Style recent-posts and pinned-posts containers to function as flex boxes */
 #recent-posts,
 #pinned-posts {
   display: flex;
@@ -105,14 +116,7 @@ button {
   justify-content: space-between;
 }
 
-#edit-comment-form {
-  display: none;
-}
-
-.form {
-  padding: 10%;
-}
-
+/* Style new post button */
 .new-post-btn {
   border-color: #e06196;
   color: #e06196;
@@ -124,6 +128,7 @@ button {
   margin-bottom: 1%;
 }
 
+/* Style edit button */
 .edit-btn {
   font-size: small;
   background-color: white;
@@ -133,18 +138,21 @@ button {
   border-color: #e06196;
 }
 
+/* Style hovering effect for edit button */
 .edit-btn:hover {
   border-color: #f5a4c5;
   background-color: #f5a4c5;
   color: white;
 }
 
+/* Style hovering effect for new post button */
 .new-post-btn:hover {
   background-color: #f5a4c5;
   color: white;
   border-color: #f5a4c5;
 }
 
+/* Style all navbar buttons */
 #home-btn,
 #login-btn,
 #logout-btn,
@@ -162,6 +170,7 @@ button {
   justify-content: center;
 }
 
+/* Style navbar button hovering */
 #home-btn:hover,
 #login-btn:hover,
 #logout-btn:hover,
@@ -170,6 +179,7 @@ button {
   background-color: #f5a4c4;
 }
 
+/* Define the flex-row container class */
 .flex-row {
   display: flex;
   flex-direction: row;
@@ -177,20 +187,28 @@ button {
   justify-content: space-between;
 }
 
+/* Delete post button */
 #delete-post {
   color: red;
   border-color: red;
 }
 
+/* Remove bullet style from unordered lists */
 ul {
   list-style: none;
 }
 
+/* Style submit button color */
 #submit-btn {
   color: #e06196;
 }
 
+/* Set new styles for screens larger than 767px wide */
 @media only screen and (min-width: 768px) {
+  #login-form {
+    margin: 10%;
+  }
+
   #sidebar {
     position: fixed;
     top: 0;
@@ -208,7 +226,7 @@ ul {
   }
 
   #content {
-    margin-left: 10%;
+    margin-left: 10% !important;
   }
 
   #recent-posts {
@@ -216,6 +234,7 @@ ul {
   }
 }
 
+/* Define styles for every screen size smaller than 768px wide */
 @media only screen and (max-width: 767px) {
   #sidebar {
     position: fixed;
