--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,28 @@
 <form id="signup-form"
-      class="mui-form form">
+      class="mui-form form" autocomplete="off">
   <h2 class="drk-pink">Sign Up</h2>
   <div class="mui-textfield mui-textfield--float-label">
-    <input type="text" id="signup-username" required>
+    <input type="text"
+           id="signup-username"
+           required autocomplete="off">
     <label>Username</label>
   </div>
   <div class="mui-textfield mui-textfield--float-label">
-    <input type="text" id="signup-email" required>
+    <input type="text"
+           id="signup-email"
+           required>
     <label>Email</label>
   </div>
   <div class="mui-textfield mui-textfield--float-label">
-    <input type="password" id="signup-password" required>
+    <input type="password"
+           id="signup-password"
+           required autocomplete="off">
     <label>Password</label>
   </div>
   <div class="mui-textfield mui-textfield--float-label">
-    <input type="password" id="signup-confirm-pass" required>
+    <input type="password"
+           id="signup-confirm-pass"
+           required>
     <label>Confirm Password</label>
   </div>
   <button type="submit"
