Updated autocomplete for signup

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,7 +16,7 @@
   <div class="mui-textfield mui-textfield--float-label">
     <input type="password"
            id="signup-password"
-           required autocomplete="off">
+           required autocomplete="new-password">
     <label>Password</label>
   </div>
   <div class="mui-textfield mui-textfield--float-label">
