Updated login autocomplete

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form id="login-form" class="mui-form form">
+<form id="login-form" class="mui-form form" autocomplete="off">
   <h2 class="drk-pink">Login</h2>
   <div class="mui-textfield">
     <input id="login-email" type="email" placeholder="Email" required>
